Updated donations.html content as suggested by Jason

--- a/apps/bcc3d.ca/pages/donations.html
+++ b/apps/bcc3d.ca/pages/donations.html
@@ -1,5 +1,5 @@
 ---
-title: Volunteers — BC Covid-19 3D Printing Group
+title: Donations — BC Covid-19 3D Printing Group
 description: We're printing crowd-sourced PPE for British Columbia's health care providers and first responders.
 layout: default
 permalink: /donations/
@@ -20,13 +20,13 @@ permalink: /donations/
         </li>
         <li class="list-group-item">
           <a href="mailto:donations@bcc3d.ca"
-            ><i class="fad fa-donate fa-fw"></i> Donate Using E-transfer</a
+            ><i class="fad fa-donate fa-fw"></i> Donate using e-transfer</a
           >
         </li>
         <li class="list-group-item">
           <a
             href="https://www.gofundme.com/f/3d-printed-face-shields-and-ear-savers"
-            ><i class="fad fa-donate fa-fw"></i> Donate on GoFundMe</a
+            ><i class="fad fa-donate fa-fw"></i> Donate using GoFundMe</a
           >
         </li>
       </ul>
@@ -38,9 +38,9 @@ permalink: /donations/
       </p>
       <p>
         Demand for our products is increasing daily as more health care
-        professionals become aware of our group and our products. We are rising
-        to the challenge, but we move faster with your support either via
-        materials or financial contributions.
+        professionals run out of traditional personal protective equipment. We
+        are rising to the challenge, but we can move faster with your support,
+        either via materials or financial contributions.
       </p>
       <h5>
         Materials
@@ -49,7 +49,8 @@ permalink: /donations/
         We are in urgent need of clear plastics that we can form our face
         shields from. If you are aware of a source for PET-G, Laminating Sheets,
         Report Covers, Overhead Transparencies, or similar materials that might
-        be suitable, our logistics team would love to hear from you. Please
+        be suitable, our logistics team would
+        <a href="mailto:admin@bcc3d.ca">love to hear from you</a>. Please
         contact us directly with the supplier information.
       </p>
       <h5>
@@ -64,9 +65,10 @@ permalink: /donations/
         <li>DONOR #2</li>
       </ul> -->
       <p>
-        As we ramp into larger scale production, this financial support is key
-        as we are resource bound, particularly when it comes to purchasing raw
-        materials, and the cost of delivery of our products.
+        As we ramp into larger scale production to support our provincial and
+        local health authorities, financial support is key as we are resource
+        bound, particularly when it comes to purchasing raw materials, and the
+        cost of delivery of our products.
       </p>
       <p>
         Every dollar counts, and we are grateful for any contribution you can
