Update logistics email address

--- a/apps/bcc3d.ca/pages/donations.html
+++ b/apps/bcc3d.ca/pages/donations.html
@@ -14,7 +14,7 @@ permalink: /donations/
 
       <ul class="list-group mb-4">
         <li class="list-group-item">
-          <a href="mailto:admin@bcc3d.ca"
+          <a href="mailto:daniel.mcewan@bcc3d.ca@bcc3d.ca"
             ><i class="fad fa-envelope fa-fw"></i> Donate Supplies</a
           >
         </li>
@@ -50,8 +50,9 @@ permalink: /donations/
         shields from. If you are aware of a source for PET-G, Laminating Sheets,
         Report Covers, Overhead Transparencies, or similar materials that might
         be suitable, our logistics team would
-        <a href="mailto:admin@bcc3d.ca">love to hear from you</a>. Please
-        contact us directly with the supplier information.
+        <a href="mailto:daniel.mcewan@bcc3d.ca@bcc3d.ca"
+          >love to hear from you</a
+        >. Please contact us directly with the supplier information.
       </p>
       <h5>
         Finances
