don't reference face masks in priority https://bccovid-19.slack.com/archives/C011B4AN6TH/p1587491073267400

--- a/apps/bcc3d.ca/pages/request.html
+++ b/apps/bcc3d.ca/pages/request.html
@@ -7,9 +7,9 @@ js: /assets/js/request.js
 
 urgencyOptions:
   - id: 1
-    label: Staff are working without face shields
+    label: Staff are working without PPE
   - id: 2
-    label: Face shields expected to run out in days
+    label: PPE expected to run out in days
   - id: 3
     label: Still have adequate stock for now
 
