remove prompt for 2 visors per frame https://bccovid-19.slack.com/archives/G011JAHR57D/p1587493316058400

--- a/apps/bcc3d.ca/pages/request.html
+++ b/apps/bcc3d.ca/pages/request.html
@@ -146,7 +146,7 @@ facilityOptions:
               required
             />
             <small id="requestVisorsHelp" class="form-text text-muted"
-              >Please limit to 2 per frame</small
+              >.../small
             >
           </div>
 
