--- a/apps/bcc3d.ca/pages/volunteers.html
+++ b/apps/bcc3d.ca/pages/volunteers.html
@@ -18,7 +18,7 @@ permalink: /volunteers/
             <ul class="list-group mb-4">
                 <li class="list-group-item"><a href="https://join.bcc3d.ca"><i class="fab fa-slack fa-fw"></i> First, join the Slack Team</a></li>
                 <li class="list-group-item"><a href="/volunteers/getting-started/"><i class="fad fa-book fa-fw"></i> Read the Getting Stated Guide</a></li>
-                <li class="list-group-item"><a href="/assets/pdf/Safe_Handoff_Protocol.pdf"><i class="fad fa-book fa-fw"></i> Read the Safe Handoff Protocol </a></li>
+                <li class="list-group-item"><a href="/assets/pdf/Safe_Handoff_Protocol.pdf"><i class="fad fa-file-pdf fa-fw"></i> Read the Safe Handoff Protocol </a></li>
             </ul>
 
             <h5>3D Printers and Producers</h5>
