Added paragraph with info
https://trello.com/c/BVqxu0bO/73-add-information-for-other-equipment-requests

--- a/apps/bcc3d.ca/pages/request.html
+++ b/apps/bcc3d.ca/pages/request.html
@@ -222,6 +222,12 @@ facilityOptions:
           />
         </div>
         {% endcomment %}
+
+        <p>
+          If you have a request for other 3D printed items to help fight the pandemic, 
+          please contact us <a href="mailto:petko.ganachev@gmail.com">here</a> or on our Slack in the <a href="https://bccovid-19.slack.com/archives/C010VHWDLKA">#ops-requests channel</a>
+        </p>
+
       </div>
 
       <div class="form-group">
