Swapped media inquiries contact person to Petko
https://trello.com/c/3PgvrK8s/82-high-priority-contact-us-swap-media-email-to-petkos

--- a/apps/bcc3d.ca/pages/contact.html
+++ b/apps/bcc3d.ca/pages/contact.html
@@ -20,7 +20,7 @@ permalink: /contact/
 
             <h5>Media Inquiries</h5>
             <ul class="contact-list">
-                <li><i class="fad fa-envelope fa-fw"></i> <a href="mailto:trent.shumay@bcc3d.ca">Trent Shumay</a> (trent.shumay@bcc3d.ca)</a></li>
+                <li><i class="fad fa-envelope fa-fw"></i> <a href="mailto:petko.ganachev@bcc3d.ca">Petko Ganachev</a> (petko.ganachev@bcc3d.ca)</a></li>
             </ul>
 
             <h5>Donation Inquiries</h5>
