Updated website wording
https://trello.com/c/TNwTg5UQ/85-website-wording-changes

--- a/apps/bcc3d.ca/pages/home.html
+++ b/apps/bcc3d.ca/pages/home.html
@@ -7,7 +7,7 @@ permalink: /
 
 <div class="hero jumbotron jumbotron-fluid mt-n3">
   <div class="container">
-    <h1 class="display-5">Free personal protective equipment for British Columbia's healthcare providers and first responders.</h1>
+    <h1 class="display-5">Free personal protective equipment for British Columbia's healthcare providers, first responders and front line workers.</h1>
     <p class="lead">
       BC Covid-19 3D Printing Group is a grassroots, volunteer-based organization dedicated to stemming the shortage of PPE for professionals who are serving on the front lines in the fight against COVID-19.
     </p>
