--- a/apps/bcc3d.ca/pages/request.html
+++ b/apps/bcc3d.ca/pages/request.html
@@ -27,6 +27,12 @@ facilityOptions:
   - id: 6
     label: Pharmacy
   - id: 7
+    label: Dentist
+  - id: 8
+    label: Physio, Chiropractor or Massage
+  - id: 9
+    label: Non-Medical
+  - id: 10
     label: Other
 ---
 
