Added updated form hints
https://trello.com/c/guD75jhE/53-request-form-improvements-change-hint-wording

--- a/apps/bcc3d.ca/pages/request.html
+++ b/apps/bcc3d.ca/pages/request.html
@@ -59,7 +59,7 @@ facilityOptions:
           required
         />
         <small id="facilityAddressHelp" class="form-text text-muted"
-          >Facility address including city and postal code</small
+          >Facility address including city and postal code. This will also be the delivery address.</small
         >
       </div>
 
@@ -95,7 +95,7 @@ facilityOptions:
           required
         />
         <small id="contactPhoneHelp" class="form-text text-muted"
-          >We will contact you to confirm your request</small
+          >Please enter a cell phone number. We will contact you to confirm your request. This should be the contact mobile for the individual receiving the delivery.</small
         >
       </div>
 
